Bug 317341 - VJOURNAL calendar entries are not fetched via CalDAV
Summary: VJOURNAL calendar entries are not fetched via CalDAV
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: DAV Resource (other bugs)
Version First Reported In: GIT (master)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-25 17:08 UTC by Stefan Brüns
Modified: 2013-03-25 22:48 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Stefan Brüns 2013-03-25 17:08:13 UTC
see resources/dav/protocols/caldavprotocol.cpp

Only VEVENT/VTODO are fetched.
Comment 1 Stefan Brüns 2013-03-25 22:48:23 UTC
Git commit cfe87345ad5d96d3abf30fd15169649cc0be2bcc by Stefan Brüns.
Committed on 25/03/2013 at 23:42.
Pushed by bruns into branch 'KDE/4.10'.

Fetch VJOURNAL from CalDAV resource

Although VJOURNAL entries were stored in the CalDAV ressource,
only VEVENT/VTODO were fetched so far.

FIXED-IN: 4.10.2
REVIEW: 109713

Signed-off-by: Stefan Brüns <stefan.bruens@rwth-aachen.de>

M  +49   -0    resources/dav/protocols/caldavprotocol.cpp

http://commits.kde.org/kdepim-runtime/cfe87345ad5d96d3abf30fd15169649cc0be2bcc
Comment 2 Stefan Brüns 2013-03-25 22:48:30 UTC
Git commit 1f8ec2c6dbf3260f7f863680086446739011f872 by Stefan Brüns.
Committed on 25/03/2013 at 23:42.
Pushed by bruns into branch 'master'.

Fetch VJOURNAL from CalDAV resource

Although VJOURNAL entries were stored in the CalDAV ressource,
only VEVENT/VTODO were fetched so far.

FIXED-IN: 4.10.2
REVIEW: 109713

Signed-off-by: Stefan Brüns <stefan.bruens@rwth-aachen.de>

M  +49   -0    resources/dav/protocols/caldavprotocol.cpp

http://commits.kde.org/kdepim-runtime/1f8ec2c6dbf3260f7f863680086446739011f872