Fetch VJOURNAL from CalDAV resource

Although VJOURNAL entries were stored in the CalDAV ressource,
only VEVENT/VTODO were fetched so far.

FIXED-IN: 4.10.2
BUG: 317341
REVIEW: 109713

Signed-off-by: Stefan Brüns <stefan.bruens@rwth-aachen.de>